mdapipkg/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Accept_New_Member_Voucher__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Accept New Member Voucher?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hosting Organization</description>
        <inlineHelpText>Hosting Organization</inlineHelpText>
        <label>Pay To Chapter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_1_Decision__c</fullName>
        <label>Approver 1 Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_2_Decision__c</fullName>
        <label>Approver 2 Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approving_Committee_or_Group__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Approving Committee or Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_ESS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned ESS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audience_Restrictions__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Audience Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Currency</label>
        <referenceTo>c2g__codaDimension4__c</referenceTo>
        <relationshipLabel>Events (Budget Currency)</relationshipLabel>
        <relationshipName>Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyforward_Blended_Rate__c</fullName>
        <label>Buyforward Blended Rate</label>
        <precision>7</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buyforward_Hedge_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyforward Hedge Id</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Events (Buyforward Hedge Id)</relationshipLabel>
        <relationshipName>Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CART_Risk_Level__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>CART Risk Level</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CVent_ID__c</fullName>
        <externalId>true</externalId>
        <label>CVent ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Champion_Onboarding_Call_Date__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Champion Onboarding Call Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <inlineHelpText>Date the event was cancelled</inlineHelpText>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_number_of_attendees__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Estimated number of attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Approver 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Approver 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Event Approver 2)</relationshipLabel>
        <relationshipName>Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <label>Event Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YPO</fullName>
                </value>
                <value>
                    <fullName>YPO championed</fullName>
                </value>
                <value>
                    <fullName>YPO Gold</fullName>
                </value>
                <value>
                    <fullName>YPO Gold championed</fullName>
                </value>
                <value>
                    <fullName>WPO</fullName>
                </value>
                <value>
                    <fullName>WPO championed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Name_Code__c</fullName>
        <formula>Event_Name__c &amp; &quot; &quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name/Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Portfolios__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Portfolios</label>
        <referenceTo>Event_Portfolios__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Team__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Event Team</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <label>Event Venue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eventcode__c</fullName>
        <label>Eventcode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Decision__c</fullName>
        <label>Final Approval Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Event is approved</fullName>
                </value>
                <value>
                    <fullName>Event is rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Responsibility__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Financial Responsibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>IF(MONTH( Start_Date__c )&gt;6, TEXT(YEAR( Start_Date__c )) &amp; &apos;-&apos; &amp; TEXT(YEAR( Start_Date__c ) + 1),TEXT(YEAR( Start_Date__c ) - 1) &amp; &apos;-&apos; &amp; TEXT(YEAR( Start_Date__c )))</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Sub_Category__c</fullName>
        <description>focus sub-category assigned to an event</description>
        <label>Focus Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business &gt; Deal Making</fullName>
                </value>
                <value>
                    <fullName>Business &gt; Innovation</fullName>
                </value>
                <value>
                    <fullName>Business &gt; Inside the Industry</fullName>
                </value>
                <value>
                    <fullName>Business &gt; International Business</fullName>
                </value>
                <value>
                    <fullName>Business &gt; Leadership Development</fullName>
                </value>
                <value>
                    <fullName>Business &gt; Strategy &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership &gt; Champion Development</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership &gt; Chapter Governance Meetings</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership &gt; Chapter Socials/Retreats</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership &gt; Forum Education</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership &gt; International and Regional Governance</fullName>
                </value>
                <value>
                    <fullName>Family &gt; Family</fullName>
                </value>
                <value>
                    <fullName>Family &gt; Parent Child</fullName>
                </value>
                <value>
                    <fullName>Family &gt; Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Family &gt; YNG+ (18-29)</fullName>
                </value>
                <value>
                    <fullName>Family &gt; Youth (Ages 17 and under)</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Arts &amp; Culture</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Food &amp; Wine</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Lifestyle &amp; Identity</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Personal Development</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Sports &amp; Wellness</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Travel &amp; Adventure</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Community Outreach</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Environment &amp; Wildlife</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Humanitarian Efforts</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Philanthropy</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Public Policy and Diplomacy</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Sustainable Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GL_Coding__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hedge_Currency__c</fullName>
        <label>Hedge Currency</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Imported_Event_Status__c</fullName>
        <label>Imported Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Country__c</fullName>
        <label>Location Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Region__c</fullName>
        <label>Location Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <label>Location State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <label>Maximum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_ID__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Meeting ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Capacity__c</fullName>
        <label>Minimum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Accepted_Participants__c</fullName>
        <label>No of Accepted Participants</label>
        <summaryFilterItems>
            <field>Contact_Event__c.Registration_Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Event__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_General__c</fullName>
        <label>No of General</label>
        <summaryFilterItems>
            <field>Contact_Event__c.Type__c</field>
            <operation>equals</operation>
            <value>General</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Event__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Training__c</fullName>
        <label>No of Training</label>
        <summaryFilterItems>
            <field>Contact_Event__c.Type__c</field>
            <operation>equals</operation>
            <value>Training</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Event__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Voucher_Used__c</fullName>
        <label>No of Voucher Used</label>
        <summaryFilterItems>
            <field>Contact_Event__c.Is_Voucher_Used__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Event__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_on_Cancelled__c</fullName>
        <label>No on Cancelled</label>
        <summaryFilterItems>
            <field>Contact_Event__c.Registration_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Contact_Event__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Passthrough__c</fullName>
        <label>Passthrough</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_due_at_registration_Amount__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Payment due at registration Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Evaluation_Score__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Previous Evaluation Score</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Final_Attendance__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Previous Final Attendance #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Final_Budget_s__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Previous Final Budget #s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_to_Show_in_Exchange__c</fullName>
        <label>Price to Show in Exchange</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Audience__c</fullName>
        <label>Primary Audience</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Training_Event__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Board Members</fullName>
                </value>
                <value>
                    <fullName>Chapter Assistant Education Officer</fullName>
                </value>
                <value>
                    <fullName>Chapter Chair</fullName>
                </value>
                <value>
                    <fullName>Chapter Education Officer</fullName>
                </value>
                <value>
                    <fullName>Chapter Family Officer</fullName>
                </value>
                <value>
                    <fullName>Chapter Forum Officer</fullName>
                </value>
                <value>
                    <fullName>Chapter Forum Vice Officer</fullName>
                </value>
                <value>
                    <fullName>Chapter Integration Officer</fullName>
                </value>
                <value>
                    <fullName>Chapter Membership Officer</fullName>
                </value>
                <value>
                    <fullName>Chapter Network Officer</fullName>
                </value>
                <value>
                    <fullName>Chapter Spouse/Partner Forum Coordinator</fullName>
                </value>
                <value>
                    <fullName>Chapter Spouse/Partner Forum Officer</fullName>
                </value>
                <value>
                    <fullName>Chapter Spouse/Partner Officer</fullName>
                </value>
                <value>
                    <fullName>Couples Only</fullName>
                </value>
                <value>
                    <fullName>Families</fullName>
                </value>
                <value>
                    <fullName>Father-Daughter (One Parent-One Child)</fullName>
                </value>
                <value>
                    <fullName>Father-Son (One PArent-One Child)</fullName>
                </value>
                <value>
                    <fullName>Management Team</fullName>
                </value>
                <value>
                    <fullName>Member/Key Associate (Member Must Attend)</fullName>
                </value>
                <value>
                    <fullName>Members Only - All</fullName>
                </value>
                <value>
                    <fullName>Members Only - WPO Centric</fullName>
                </value>
                <value>
                    <fullName>Members Only - YPO Gold Centric</fullName>
                </value>
                <value>
                    <fullName>Member-Spouse/Partner (Joint or Individual)</fullName>
                </value>
                <value>
                    <fullName>Mother-Daughter (One Parent-One Child)</fullName>
                </value>
                <value>
                    <fullName>Mother-Son (One Parent-One Child)</fullName>
                </value>
                <value>
                    <fullName>Network Chair</fullName>
                </value>
                <value>
                    <fullName>Parent/Child</fullName>
                </value>
                <value>
                    <fullName>Regional Area Chair</fullName>
                </value>
                <value>
                    <fullName>Regional Chair</fullName>
                </value>
                <value>
                    <fullName>Regional Education Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramChapterInternational__c</fullName>
        <formula>IF(
ISPICKVAL(Program_Format__c,&quot;Chapter Event&quot;), &quot;Chapter Event&quot;, &quot;International Event&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProgramChapterInternational</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Format__c</fullName>
        <label>Program Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Action Forum Meeting</fullName>
                </value>
                <value>
                    <fullName>Board and Governance</fullName>
                </value>
                <value>
                    <fullName>Certified Forum Facilitator (CFF)</fullName>
                </value>
                <value>
                    <fullName>Certified Transformational Forum Facilitator (CTFF)</fullName>
                </value>
                <value>
                    <fullName>Chapter</fullName>
                </value>
                <value>
                    <fullName>Chapter Administrator Workshop</fullName>
                </value>
                <value>
                    <fullName>Chapter Event</fullName>
                </value>
                <value>
                    <fullName>Chapter Forum Stir Fry</fullName>
                </value>
                <value>
                    <fullName>Chapter Leadership Workshop (CLW)</fullName>
                </value>
                <value>
                    <fullName>Conferences</fullName>
                </value>
                <value>
                    <fullName>Event (historical only)</fullName>
                </value>
                <value>
                    <fullName>Event Complex (historical only)</fullName>
                </value>
                <value>
                    <fullName>Event in a Box (Resource Library only)</fullName>
                </value>
                <value>
                    <fullName>Event Program Development Meeting (EPDM)</fullName>
                </value>
                <value>
                    <fullName>Executive Education</fullName>
                </value>
                <value>
                    <fullName>Experiences</fullName>
                </value>
                <value>
                    <fullName>Family UniversitiesSpecial Events</fullName>
                </value>
                <value>
                    <fullName>Fast Track Event</fullName>
                </value>
                <value>
                    <fullName>Forum Education and Development</fullName>
                </value>
                <value>
                    <fullName>Forum Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Forum Jam</fullName>
                </value>
                <value>
                    <fullName>Forum Moderator &amp; Leadership Development</fullName>
                </value>
                <value>
                    <fullName>GLC/CLW</fullName>
                </value>
                <value>
                    <fullName>Global Conference Call (GCC)</fullName>
                </value>
                <value>
                    <fullName>Global Leadership Conference (GLC)</fullName>
                </value>
                <value>
                    <fullName>Global Leadership Summit</fullName>
                </value>
                <value>
                    <fullName>Global Networking Summit (GNS)</fullName>
                </value>
                <value>
                    <fullName>Industry Roundtables</fullName>
                </value>
                <value>
                    <fullName>International Board Meeting</fullName>
                </value>
                <value>
                    <fullName>JumpStart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Location_Region__c</fullName>
        <description>May be used with FF, Cvent, and or Wave</description>
        <label>Program Location Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ready_For_Rev_Rec__c</fullName>
        <formula>IF(TODAY() &gt;= End_Date__c,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready For Rev Rec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Currency_Mapping__c</fullName>
        <formula>TEXT( CurrencyIsoCode )</formula>
        <label>Registration Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsors__c</fullName>
        <label>Sponsors</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Formula__c</fullName>
        <formula>IF (ISPICKVAL(Status__c, &quot;Completed&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No Registration Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Business and Executive Training (Historical)</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership</fullName>
                </value>
                <value>
                    <fullName>Community (Historical)</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Personal Development (Historical)</fullName>
                </value>
                <value>
                    <fullName>Regional Board Meeting (Historical)</fullName>
                </value>
                <value>
                    <fullName>Regional Executive Committee Meeting (Historical)</fullName>
                </value>
                <value>
                    <fullName>Regional Strategic Planning Session (Historical)</fullName>
                </value>
                <value>
                    <fullName>Social Impact</fullName>
                </value>
                <value>
                    <fullName>YPO-YPO Gold Leadership (Historical)</fullName>
                </value>
                <value>
                    <fullName>YPO-WPO Leadership (Historical)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Code__c</fullName>
        <label>Task Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Participants__c</fullName>
        <label>Total Participants</label>
        <summaryForeignKey>Contact_Event__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>